# Pazymiu_Skaiciavimas_Upgrade

./: .gitignore  CMakeLists.txt  Doxyfile  PazymiuSkaiciavimas.depend  README.md  calculation.cpp  calculation.h  catch.hpp  f10  f100  f1000  f10000  f100000  filecheck.cpp  filecheck.h  kursiokai.txt  main.cpp  masyvai.cpp  pazym.cpp  pazym.h  raw -O3 intel  raw times -O1.txt  raw times no optimization.txt  splibygrades.h  splitbygradesclass.cpp  splitbygradesclass.h  testing.cpp
html/: _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  annotated.html  calculation_8cpp.html  calculation_8cpp_source.html  calculation_8h.html  calculation_8h_source.html  classes.html  classrandutils_1_1auto__seeded-members.html  classrandutils_1_1auto__seeded.html  classrandutils_1_1random__generator-members.html  classrandutils_1_1random__generator.html  classstudent_class-members.html  classstudent_class.html  doxygen.css  filecheck_8cpp.html  filecheck_8cpp_source.html  filecheck_8h.html  filecheck_8h_source.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  hierarchy.html  index.html  main_8cpp.html  main_8cpp_source.html  md__r_e_a_d_m_e.html  menudata.js  namespacemembers.html  namespacemembers_type.html  namespacerandutils.html  namespaces.html  pages.html  randutils_8hpp.html  (+11 more)
